Updated CSS for: Category Totals - To fix first car getting cut off when it becomes scrollable. Growth Graph - Made the graph still vislble when the screen gets to small. Debts - Commented out current debts section until I figure out a better way to display the data.

--- a/personalfinanceapp/src/pages/home/CategoryTotalList.css
+++ b/personalfinanceapp/src/pages/home/CategoryTotalList.css
@@ -11,4 +11,5 @@
     width: 100%;
     scroll-behavior: smooth;
     align-items: center;
+    scroll-padding-left: 10px;
 }
