--- a/personalfinanceapp/src/pages/home/GrowthGraph.css
+++ b/personalfinanceapp/src/pages/home/GrowthGraph.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 70%;
     max-height: 80%;
    
 }
